--- a/lab_1216.ipynb
+++ b/lab_1216.ipynb
@@ -67,7 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knight_1 = Knight()"
+    "knight_1 = Knight()\n",
+    "\n"
    ]
   },
   {
