--- a/lab_1209.ipynb
+++ b/lab_1209.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "name = input(\"이름을 입력해주세요:\")\n",
     "age = input(\"나이를 입력해주세요:\")\n",
-    "phone = input(\"연락처를 입력해주세요:\")"
+    "phone = input(\"연락처를 입력해주세요:\")\n"
    ]
   },
   {
