--- a/lab_1211.ipynb
+++ b/lab_1211.ipynb
@@ -42,7 +42,7 @@
     "file2 = open(\"test.txt\", encoding=\"utf-8\")\n",
     "text = file2.read()\n",
     "file2.close()\n",
-    "text"
+    "print(text)"
    ]
   },
   {
@@ -148,7 +148,7 @@
     "            \n",
     "        break\n",
     "\n",
-    "scores"
+    "print(scores) "
    ]
   },
   {
